<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APSAtividades</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicial">InicialActivity</string>
    <string name="lbl_new">Nova Atividade</string>
    <string name="lbl_see">Ver todas as atividades</string>
    <string name="lbl_perfil">meu perfil</string>
    <string name="lbl_logout">Logout</string>
    <string name="title_activity_cria_nova_atividade">CriaNovaAtividade</string>
    <string name="title_activity_lista_atividades">ListaAtividadesActivity</string>
    <string name="title_activity_ver_perfil">VerPerfilActivity</string>
    <string name="lbl_editar">Editar</string>
    <string name="lbl_delete">Deletar</string>
    <string name="title_activity_editar_main">EditarMainActivity</string>
    <string name="lbl_bt">Atualizar</string>
    <string name="lbl_dica1">nome</string>
    <string name="lbl_dica2">descricao</string>
    <string name="lbl_criar">Criar</string>
    <string name="bt_entrar">Entrar</string>
    <string name="lbl_verPerfil">Ver Perfil</string>
    <string name="lbl_perfil2">Meu Perfil</string>
    <string name="lbl_tirarFoto">Nova Foto</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_verifica">Ver disponibilidade da camera</string>
    <string name="title_activity_ver_atividade">VerAtividadeActivity</string>
    <string name="lbl_welcome">Bem-Vindo!</string>
    <string name="lbl_welcome2">Bem-Vindo</string>
    <string name="lbl_user">login</string>
    <string name="lbl_password">senha</string>
    <string name="lbl_novo">Criar novo usuario</string>
    <string name="title_activity_novo_usuario">NovoUsuarioActivity</string>
    <string name="lbl_novoUser">Novo Usuário</string>
    <string name="lbl_confirma">Confirmar</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_Senha">Senha</string>
    <string name="lbl_nomeU">Nome</string>

</resources>
