<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/btNovaAt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_new" />

    <Button
        android:id="@+id/btVerAtividades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_see" />

    <Button
        android:id="@+id/btVerPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_perfil" />

    <Button
        android:id="@+id/btLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/lbl_logout" />

</LinearLayout>
